# odilia-prototype

./: CHANGELOG.md  Cargo.toml  README.md  setup-permissions.sh
src/: events.rs  handlers.rs  keybinds.rs  main.rs  state.rs
yggdrasil-prototype/: Cargo.toml
