[package]
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "alberto tirla<albertotirla@gmail.com>"]
edition = "2021"
name = "odilia"
version = "0.0.2"

[dependencies]
atspi = {git="https://github.com/yggdrasil-sr/atspi.git"}
atspi-codegen = {git = "https://github.com/yggdrasil-sr/atspi-codegen.git", features = ["nonblock"]}
dbus = {version = "0.9.5", features = ["futures"]}
dbus-tokio = "0.7.5"
futures = "0.3.17"
once_cell = "1.8.0"
rdev = {optional = false, git = "https://github.com/yggdrasil-sr/rdev", features = ["unstable_grab"]}
tokio = {version = "1.14.0", features = ["full"]}
tts_subsystem = {git = "https://github.com/yggdrasil-sr/tts_subsystem"}
