[package]
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
edition = "2021"
name = "odilia"
version = "0.0.2"

[dependencies]
atspi = { git = "https://github.com/odilia-app/atspi.git", branch = "testing"}
atspi-codegen = { git = "https://github.com/odilia-app/atspi-codegen.git", features = ["nonblock"] }
dbus = { version = "0.9.5", features = ["futures"] }
dbus-tokio = "0.7.5"
futures = "0.3.17"
once_cell = "1.8.0"
rdev = "0.5.1"
odilia-common = { git = "https://github.com/odilia-app/odilia-common" }
odilia-input = { git = "https://github.com/odilia-app/odilia-input" }
tokio = {version = "1.14.0", features = ["full"]}
tts_subsystem = { git = "https://github.com/odilia-app/tts_subsystem" }
lazy_static = "1.4.0"
